added title to day 2 post

--- a/2022.03.01_Day-2.md
+++ b/2022.03.01_Day-2.md
@@ -1,3 +1,5 @@
+# 2022-03-01 - Day 2
+
 Continued with the Google DA course. Went over their section on Advanced Cleaning Functions which consisted of using `CAST` to convert data types, `CONCAT` to add strings together to create unique keys and `COALESCE` to return non-null values.
 
 Started week 4 of section 4 today. Learning about the importance of verification, reporting and documentation/changelogs. 
